# aioads

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
aioads/: ads_client.py  ads_error_codes.py  ads_notifications.py  ads_symbol_cache.py  ads_symbol_parser.py  ams_address.py  ams_header.py  ams_service_port.py  ams_tcp_header.py  errors.py  stream.py  transport.py
aioads/commands/: ads_add_notification.py  ads_command.py  ads_delete_notification.py  ads_read.py  ads_read_device_info.py  ads_read_state.py  ads_read_write.py  ads_write.py  ads_write_state.py  errors.py
aioads/functions/: ads_enable_route.py  ads_function.py  ads_sum_read.py  ads_sum_read_write.py  ads_symbol_datatype_by_name.py  ads_symbol_datatype_upload.py  ads_symbol_info_by_name_ex.py  ads_symbol_table_version.py  ads_symbol_upload.py  ads_symbol_upload_info.py
aioads/utils/: local_ip.py
docs/: transmission_mode.md  unittest_style_guide.html
examples/: read_cmd_reuse_mqtt.py  read_cycles.py  read_cycles_mqtt.py  read_multiple.py  read_multiple_mqtt.py  read_single.py
tests/: builders.py
tests/integration/: README.md  base.py  config.example.toml  config.py  test_connection.py  test_memory.py  test_performance.py  test_read_symbols.py
tests/unit/: test_ads_client.py  test_ads_error_codes.py  test_ads_notifications.py  test_ads_symbol_cache.py  test_ads_symbol_parser.py  test_ams_address.py  test_ams_header.py  test_ams_tcp_header.py  test_errors.py  test_stream.py  test_transport.py
tests/unit/commands/: test_ads_add_notification.py  test_ads_command.py  test_ads_delete_notification.py  test_ads_read.py  test_ads_read_device_info.py  test_ads_read_state.py  test_ads_read_write.py  test_ads_write.py  test_ads_write_state.py  test_errors.py
tests/unit/functions/: test_ads_enable_route.py  test_ads_function.py  (+8 more)
(+1 files in other folders)
