[project]
name = "aioads"
version = "0.1.0.dev6"
description = "An asynchronous Python library for communicating with Beckhoff TwinCAT PLCs"
authors = [
    { name = "MkKiefer", email = "102972583+MkKiefer@users.noreply.github.com" },
]
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }


dependencies = []
[dependency-groups]
dev = [
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "coverage>=7.6.10",

    "parameterized>=0.9.0",
]

[project.optional-dependencies]
aiomqtt = ["aiomqtt>=v3.0.0-alpha.1"]
gmqtt = ["gmqtt>=0.7.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aioads"]


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest tests"
lint = "pylint aioads"
"coverage:test" = "coverage run -m pytest -v tests"
"coverage:export" = "coverage xml"
"coverage:report" = "coverage report -m"
coverage = { composite = [
    "coverage:test",
    "coverage:report",
    "coverage:export",
] }

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
# Allow more duplication before flagging R0801 (duplicate-code) instead of
# disabling the check entirely.
min-similarity-lines = 10

[tool.pylint."messages control"]
disable = [
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "broad-exception-caught",
]
